[tool.poetry]
name = "neetbox"
version = "0.3.1"
description = "Logging/Debugging/Tracing/Managing/Facilitating long running python projects, especially a replacement of tensorboard for deep learning projects"
license = "MIT"
authors = ["VisualDust <gavin@gong.host>", "Lideming <me@yuuza.net>"]
maintainers = [
    "PaperCube <imzhy@hotmail.com>",
    "PommesPeter <me@pommespeter.space>",
    "PuQing <me@puqing.work>",
]


readme = "README.md"
homepage = "https://neetbox.550w.host"
repository = "https://github.com/visualDust/neetbox"
keywords = ["computer vision", "tools", "logging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]

include = ["neetbox/frontend_dist/*"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
toml = ">0.10"
setproctitle = ">=1.0"
rich = ">=13"
click = "^8.1.7"
pyfiglet = "^1.0.2"
httpx = "^0.24.0"
flask = "^2.2.3"
websocket-client = "^1.6.4"
websocket-server = "^0.6.4"
gputil = "^1.4.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.9.1"
isort = "^5.11.5"
pre-commit = ">=3.4.0"
apiflask = "^2.0.2"
opencv-python = "^4.8.1.78"
pillow = "^10.1.0"
pytest-cov = "^4.1.0"

[tool.poetry.extras]
torch = ["torch", "torchvision", "torchaudio"]

transformer = ["transformers"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
neet = 'neetbox.cli.parse:main'

[tool.black]
line-length = 100
