[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"

[project]
name = "neetbox"
version = "0.6.2"
description = "Logging/Debugging/Tracing/Managing/Facilitating long running python projects, especially a replacement of tensorboard for deep learning projects"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "VisualDust", email = "gavin@gong.host" },
    { name = "Lideming", email = "me@yuuza.net" },
]
maintainers = [
    { name = "PaperCube", email = "imzhy@hotmail.com" },
    { name = "PommesPeter", email = "me@pommespeter.space" },
    { name = "PuQing", email = "me@puqing.work" },
]
readme = "README.md"
keywords = ["computer vision", "tools", "logging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.3.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "numpy>=2.2.6",
    "pip>=25.3",
    "psutil>=7.2.1",
    "pyfiglet>=1.0.4",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.21",
    "rich>=14.2.0",
    "setproctitle>=1.3.7",
    "sqlmodel>=0.0.31",
    "toml>=0.10.2",
    "uvicorn>=0.40.0",
    "vdtoys>=0.1.7",
    "websocket-client>=1.9.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "pillow>=12.1.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.urls]
Homepage = "https://neetbox.550w.host"
Repository = "https://github.com/visualDust/neetbox"

[project.scripts]
neet = "neetbox.cli.parse:main"

[tool.uv.build-backend]
source-exclude = ["neetbox/frontend_dist/**/*"]
module-root = ""

[tool.black]
line-length = 100

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true